# featureless_object_detection_using_triangulation

./: CMakeLists.txt  README.md
include/: HSV_tracker.cpp  delaunay_triangles.cpp  header.h  hsv_segmentation_contour.cpp  include_files.h  model.cpp  object.cpp  object_matcher.cpp
src/: image_recognition.cpp
